[package]
name = "movie-night-rs"
version = "0.1.0"
authors = ["Robert Finley <rfinley93@gmail.com>", "Tyler Diaz <tydiaz7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0.87"
rand = "0.8.5"

[dependencies.serenity]
version = "0.11"

[dependencies.tokio]
version = "1.21.2"
features = ["macros", "rt-multi-thread"]

[dotenv]
DISCORD_API_TOKEN = "TOKEN"
